[FIX] web_editor: adapts the position of handle buttons
Before this commit, if an element is at the top of the screen, its
handle buttons are too high to be interacted with.

This commit fixes this issue by placing them at the bottom of the
overlay if the element is too close from the top.

task-2312878

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -1588,6 +1588,12 @@ body.editor_enable.editor_has_snippets {
 
             > .o_overlay_options_wrap {
                 @include o-position-absolute($o-we-handles-offset-to-hide, $left: 50%);
+
+                &.o_page_top {
+                    top: auto;
+                    bottom: -($o-we-handles-offset-to-hide + 50px);
+                }
+
                 transform: translate(-50%, -110%);
 
                 &, > .o_overlay_move_options {
